# USV-SIMULATION

./: IAR-CPS-0001-26- CENA DO IARA LUA V0.1 (1).ttt  README.md
usv_ws/src/cba_art_intrf/: CMakeLists.txt  package.xml
usv_ws/src/cba_art_intrf/msg/: NavDat.msg
usv_ws/src/cba_art_intrf/srv/: Trajectory.srv
usv_ws/src/cop_sim_pkg/: package.xml  setup.cfg  setup.py
usv_ws/src/cop_sim_pkg/cop_sim_pkg/: controler.py  coppelia_com_node.py  input.py
usv_ws/src/robot_bringup/: CMakeLists.txt  package.xml
usv_ws/src/robot_bringup/launch/: sim_launch.xml
